# django-grpc-framework

./: .flake8  .gitignore  .travis.yml  CHANGELOG.md  CHANGES  Dockerfile  Makefile  README.rst  TODO  docker-compose.yml  lintall.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
django_grpc_framework/: apps.py  generics.py  mixins.py  pagination.py  serializers.py  services.py  settings.py  signals.py  test.py
django_grpc_framework/migrations/: 0002_auto_20210326_0044.py  0003_grcperrorcode_count.py
django_grpc_framework/protobuf/: generators.py
django_socio_grpc/: admin.py  apps.py  exceptions.py  generics.py  log.py  mixins.py  models.py  proto_serializers.py  servicer_proxy.py  services.py  settings.py  test.py  views.py
django_socio_grpc/migrations/: 0001_initial.py  0004_auto_20210326_0101.py  0005_grcpmicroservices.py  0006_grcperrorcode_category.py  0007_grcpdatabases.py  0008_auto_20210326_1451.py  0009_grcpdatabases_service.py  0010_auto_20210326_1709.py  0011_auto_20210327_1358.py  0012_grcpprotobuffields.py  0013_auto_20210328_1458.py  0014_auto_20210328_1501.py  0015_auto_20210328_1557.py  0016_grcperrorcode_reason.py  0017_auto_20210328_1850.py  0018_sociogrpcerrors_elapse.py  0019_auto_20210328_1937.py  0020_grcpmicroservices_error.py  0021_grpclogging.py  0022_grpclogging_result.py  0023_auto_20210328_2007.py  0024_auto_20210328_2025.py  0025_grpcmethod.py  0026_auto_20210328_2348.py  0027_grpcmethod_is_update.py  0028_grpcmethod_input.py
django_socio_grpc/protobuf/: generators.py  json_format.py
django_socio_grpc/request_transformer/: __init_.py  grpc_socio_proxy_context.py  grpc_socio_request.py  grpc_to_http_request.py
django_socio_grpc/tests/: fake_grpc.py  test_app_handler_registry.py  test_async_mixins.py  test_async_model_service.py  test_authentication.py  test_filtering.py  test_model_service.py  test_pagination.py  test_permissions.py  test_proto_generation.py  utils.py
django_socio_grpc/utils/: model_extractor.py  model_meta.py  servicer_register.py
docs/: conf.py  generics.rst  index.rst  installation.rst  license.rst  proto_serializers.rst  protos.rst  quickstart.rst  serializers.rst  server.rst  services.rst  settings.rst  testing.rst
docs/patterns/: index.rst  null_support.rst  partial_update.rst
docs/tutorial/: building_services.rst  generics.rst  index.rst  services.rst  using_generics.rst  writing_tests.rst
examples/demo/: client.py  demo.proto  demo_pb2.py  demo_pb2_grpc.py
examples/null_support/: client.py  manage.py  snippets.proto  snippets_pb2.py  snippets_pb2_grpc.py
proto/: fakeapp.proto
sql/: grpc_error_code.sql
test_utils/: boot_django.py  djangoshell.py  generateproto.py  load_tests.py  makemigrations.py  migrate.py  runserver.py  test_runner.py
tests/: test_services.py
(+91 files in other folders)
