[tool.poetry]
name = "django-socio-grpc"
version = "0.1.1"
description = "Fork of django-grpc-framework with more feature maintained by the socio team. Make GRPC with django easy."
authors = ["Adrien Montagu <adrienmontagu@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.6"
django = ">=2.2, <4.0"
djangorestframework = "*"
grpcio = "*"
grpcio-tools = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"
black = "*"
isort = "*"
mock = "*"
django-fake-model = "^0.1.4"
django-filter = "^2.4.0"
psycopg2-binary = "^2.8.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 95
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
  | build
  | dist
  | examples
)/
'''

[tool.isort]
include_trailing_comma = true
line_length = 95
multi_line_output = 3
use_parentheses = true
known_third_party = ['mock']

[tool.poetry.scripts]
tests = "test_utils.load_tests:launch"
