[wheel]
universal = 1

[metadata]
name = django-socio-grpc
version = 1.0
description = A Django gRPC Framework.
long_description = file: README.rst
url = https://www.socotec.fr
author = Guillaume O'Neill
author_email = gon.siilk@gmail.com
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = find:
